inline block styling

--- a/style.css
+++ b/style.css
@@ -8,7 +8,17 @@
 }
 
 .block01 {
+  background-color: blue;
+  display: inline-block;
+  height: 100px;
+  width: 200px;
+  margin: 20px;
 }
 
 .block02 {
+  background-color: red;
+  display: inline-block;
+  height: 100px;
+  width: 200px;
+  margin: 20px;
 }
