absolute pos challenge solution

--- a/style.css
+++ b/style.css
@@ -12,8 +12,8 @@
   height: 100px;
   width: 100px;
   position: absolute;
-  top: 200;
-  left: 200;
+  top: 200px;
+  left: 200px;
 }
 
 .block02 {
@@ -21,8 +21,8 @@
   height: 100px;
   width: 100px;
   position: absolute;
-  top: 100;
-  left: 1000;
+  top: 100px;
+  left: 100px;
 }
 
 .block03 {
