--- a/style.css
+++ b/style.css
@@ -9,6 +9,11 @@
 
 body {
   font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+  font-size: 2.5rem;
+}
+
+h2 {
+  margin: 0;
 }
 
 .block01 {
