--- a/style.css
+++ b/style.css
@@ -20,28 +20,17 @@ h2 {
   background-color: red;
   height: 300px;
   width: 300px;
-  position: relative;
-  top: 100px;
 }
 
 .block02 {
   background-color: blue;
   height: 100px;
   width: 100px;
-  position: absolute;
-  top: 50px;
-  left: 50px;
+  float: right;
 }
 
 .block03 {
   background-color: yellow;
   height: 100px;
   width: 100px;
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
-.font01 {
-  font-family: "fantasy";
 }
